--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -6,6 +6,7 @@
 div.card:nth-child(1) {
   margin-top: 0;
 }
+
 .Star-container,
 .Star-container_small {
   width: 35%;
@@ -23,6 +24,17 @@ div.card:nth-child(1) {
   display: flex;
   flex-direction: column;
 }
+.Star-container > .star.btn-review {
+  cursor: default;
+}
+.Star-container_small > .star.btn-review {
+  cursor: default;
+}
+
+.Business_column-right > .Star-container_small {
+  cursor: default;
+}
+
 .Btn-Primary.review {
   width: 95px;
   padding-top: 5px;
