--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -49,7 +49,7 @@
 .BusinessList-Card:nth-child(1) {
   margin-top: 0;
 }
-.BusinessList-Card :last-child {
+.BusinessList-Card:last-child {
   border-bottom: none;
 }
 .BusinessList-Card {
@@ -81,9 +81,12 @@
     overflow-y: scroll;
     margin-top: 200px;
   }
+
   .BusinessList-Header {
-    left: 20%;
-    transform: translate(0%, 0);
+    margin: 0;
+    width: 80%;
+    text-align: center;
+    line-height: 1;
   }
   .BusinessList-FiltersContainer {
     width: 60%;
