--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -64,9 +64,9 @@
   .BusinessList-FiltersContainer {
     grid-column: 3/7;
   }
-  .BusinessList-CardContainer {
+  /* .BusinessList-CardContainer {
     grid-column: 3/7;
-  }
+  } */
 }
 
 @media screen and (max-width: 575px) {
