update business scroll reviews user vs owner

--- a/client/src/components/BusinessReviews/BusinessReviews.css
+++ b/client/src/components/BusinessReviews/BusinessReviews.css
@@ -76,9 +76,9 @@ ul.BusinessReviews_scroll h6.BusinessReviews_container-noReviews {
   text-align: center;
 }
 
-.BusinessReviews_container {
+.BusinessDetails_reviews > .BusinessReviews_container {
   overflow-y: scroll;
-  height: 99.9%;
+  height: 75%;
 }
 .BusinessReviews_container-noReviews {
   margin-top: 20px;
