--- a/client/src/pages/BusinessDetails/BusinessDetails.css
+++ b/client/src/pages/BusinessDetails/BusinessDetails.css
@@ -50,20 +50,34 @@ h5.features:last-child {
   overflow: hidden;
   padding-bottom: 0;
 }
+/* .BusinessDetails-rightColumn
+  + .BusinessDetails-buttons.Review-container.Btn-Primary.review.book {
+  margin-top: 0;
+} */
 .BusinessDetails-buttons {
   display: flex;
   flex-direction: column;
 }
-.Btn-Primary.review.book,
+.Btn-Primary.review,
 .phoneNumber {
   align-self: center;
   margin-left: 50px;
-  margin-top: -42px;
+  /* margin-top: -42px; */
 }
+.Btn-Primary.review.book {
+  /* margin-top: -42px; */
+}
+.Btn-Primary.review.not-owner {
+  margin-top: 0;
+}
+
+/* .Btn-Primary.review.owner {
+  visibility: hidden;
+} */
 .phoneNumber {
-  margin-top: -30px;
+  /* margin-top: -30px; */
   margin-left: 65px;
-  margin-bottom: 11px;
+  margin-bottom: 7px;
 }
 .BusinessDetails_reviews h4 {
   border-top: 1px solid #f32dc8;
@@ -71,15 +85,18 @@ h5.features:last-child {
   font-weight: 500;
   padding: 1rem;
   margin: 0;
+  margin-bottom: 2.5rem;
   text-align: center;
   margin-top: 3rem;
 }
 .BusinessDetails_reviews {
   height: 60%;
 }
+.BusinessDetails-buttons + .BusinessDetails_reviews h4 {
+  margin-bottom: 0;
+}
 
-/* ///////media queries ////////// */
-
+/** Media Queries **/
 @media screen and (max-width: 990px) {
   .BusinessDetails-leftColumn {
     grid-column: 3/7;
