--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -14,6 +14,7 @@ div.card:nth-child(1) {
   justify-content: space-between;
   margin-top: 1rem;
   margin-bottom: 2rem;
+  margin-right: 35%;
 }
 .Star-container_small {
   width: 50%;
@@ -22,7 +23,8 @@ div.card:nth-child(1) {
 }
 .Review-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .Star-container > .star.btn-review {
   cursor: default;
