--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -100,4 +100,33 @@
     padding: 3rem;
     padding-bottom: 0rem;
   }
+
+  .BusinessList-modal {
+    position: fixed;
+    width: 65%;
+
+    height: fit-content;
+    /* right: -100%; */
+    top: 22%;
+    text-align: left;
+    line-height: normal;
+    transition: 0.7s;
+    z-index: 2;
+    margin-right: 9%;
+    display: flex;
+    justify-content: center;
+    color: black;
+    border: 0.5px solid black;
+    background-image: url('../../assets/images/hairgrey-mobile.jpg');
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+  .BusinessList-FiltersContainer.modal {
+    width: 90%;
+    border: 0;
+    height: fit-content;
+    margin: auto;
+    position: relative;
+    padding: 3rem 2rem 5rem 2rem;
+  }
 }
