add button to base

--- a/client/src/pages/BusinessList/BusinessList.css
+++ b/client/src/pages/BusinessList/BusinessList.css
@@ -96,7 +96,7 @@
   .BusinessList-CardContainer {
     width: 80%;
     margin: auto;
-    margin-top: 3rem;
+    margin-top: 5.5rem;
     padding: 3rem;
     padding-bottom: 0rem;
   }
@@ -118,7 +118,7 @@
     color: black;
     border: 0.5px solid black;
     background-image: url('../../assets/images/hairgrey-mobile.jpg');
-    left: 50%;
+    /* left: 50%; */
     transform: translate(-50%, 0);
   }
   .BusinessList-FiltersContainer.modal {
@@ -135,5 +135,17 @@
     right: 5%;
     border: none;
     top: 2%;
+  }
+  .BusinessList-Header_errorMessage {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+  }
+  .Btn-Primary.modal {
+    position: absolute;
+    transform: translate(-50%, 0);
+    left: 50%;
+    margin: 0;
+    padding: 0 0.5rem;
   }
 }
